--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>3.44.1.0</version>
         </dependency>
         <dependency>
+            <groupId>org.jocl</groupId>
+            <artifactId>jocl</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>17.0.6</version>
