--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>2.0.4</version>
         </dependency>
         <dependency>
+            <groupId>com.jhlabs</groupId>
+            <artifactId>filters</artifactId>
+            <version>2.0.235-1</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>17.0.6</version>
